# vicar_parser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  a.out  build.sh  main.cpp  makefile  test.pgm  test_3.pgm  test_4.pgm  vicar  vicar.hpp
examples/: CMakeLists.txt  main.cpp
include/: parser.hpp  vicar.hpp
include/vicar/: vicar.hpp
resources/: test.img  test.tif  test.tiff  test.vicar  test3.img  test6.img
resources/pgm/: test.pgm  test_1.pgm  test_2.pgm  test_5.pgm
resources/raw/: cas.img  cas1.img  sat.img  titan.img  voyager.img
src/: CMakeLists.txt  image_builder.cpp  main.cpp  parser.cpp  pgm_image.cpp  vicar.cpp
src/image/: CMakeLists.txt  image_builder.cpp  pgm_image.cpp  tiff_image.cpp
src/image/include/: image_builder.hpp  pgm_image.hpp  tiff_image.hpp
src/include/: image_builder.hpp  parser.hpp  pgm_image.hpp  vicar.hpp
